--- a/semana1/dia1/index.html
+++ b/semana1/dia1/index.html
@@ -14,7 +14,7 @@
         <h3>Mascotas: Sin mascotas</h3>
         <h4>Hobby: Jugar Videojuegos</h4>
         <h5>Equipo favorito: Barcelona</h5>
-        <h6>Lenguaje: html</h6>
+        <h6>Lenguaje: PHP</h6>
     </main>>
 </body>
 </html>
