--- a/semana1/dia2/index.html
+++ b/semana1/dia2/index.html
@@ -8,6 +8,12 @@
 
 </head>
 <body>
+    <header>
+        Esta es la cabecera
+    </header>
+    <nav>
+        opcion1 opcion2 opcion3 opcion4
+    </nav>
     <main>
         <h1>Nombre: Jesus Quispe Mallma</h1>
         <h2>Telf: 934111593</h2>
@@ -15,6 +21,15 @@
         <h4>Hobby: Jugar Videojuegos</h4>
         <h5>Equipo favorito: Barcelona</h5>
         <h6>Lenguaje: PHP</h6>
-    </main>>
+    </main>
+    <section>
+        Esta es la etiqueta section
+        <aside>
+            aside
+        </aside>
+    </section>
+    <footer>
+        Este es el pie de pagina
+    </footer>
 </body>
 </html>
