formato basico html - prettier

--- a/semana1/dia2/index.html
+++ b/semana1/dia2/index.html
@@ -1,35 +1,26 @@
 <! DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="coders en cuarentena reloaded !!!">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="coders en cuarentena reloaded !!!" />
     <title>Coders en cuarentena</title>
-
-</head>
-<body>
-    <header>
-        Esta es la cabecera
-    </header>
-    <nav>
-        opcion1 opcion2 opcion3 opcion4
-    </nav>
+  </head>
+  <body>
+    <header>Esta es la cabecera</header>
+    <nav>opcion1 opcion2 opcion3 opcion4</nav>
     <main>
-        <h1>Nombre: Jesus Quispe Mallma</h1>
-        <h2>Telf: 934111593</h2>
-        <h3>Mascotas: Sin mascotas</h3>
-        <h4>Hobby: Jugar Videojuegos</h4>
-        <h5>Equipo favorito: Barcelona</h5>
-        <h6>Lenguaje: PHP</h6>
+      <h1>Nombre: Jesus Quispe Mallma</h1>
+      <h2>Telf: 934111593</h2>
+      <h3>Mascotas: Sin mascotas</h3>
+      <h4>Hobby: Jugar Videojuegos</h4>
+      <h5>Equipo favorito: Barcelona</h5>
+      <h6>Lenguaje: PHP</h6>
     </main>
     <section>
-        Esta es la etiqueta section
-        <aside>
-            aside
-        </aside>
+      Esta es la etiqueta section
+      <aside>aside</aside>
     </section>
-    <footer>
-        Este es el pie de pagina
-    </footer>
-</body>
+    <footer>Este es el pie de pagina</footer>
+  </body>
 </html>
