usando etiquetas a ul ol

--- a/semana1/dia2/index.html
+++ b/semana1/dia2/index.html
@@ -9,6 +9,8 @@
   <body>
     <header>Esta es la cabecera</header>
     <nav>opcion1 opcion2 opcion3 opcion4</nav>
+    <a href="./hobbies.html" target="_blank">Hobbies</a>
+    <a href="https://www.google.com.pe/" target="_blank">Google</a>
     <main>
       <h1>Nombre: Jesus Quispe Mallma</h1>
       <h2>Telf: 934111593</h2>
