--- a/semana1/dia2/index.html
+++ b/semana1/dia2/index.html
@@ -11,6 +11,7 @@
     <nav>opcion1 opcion2 opcion3 opcion4</nav>
     <a href="./hobbies.html" target="_blank">Hobbies</a>
     <a href="https://www.google.com.pe/" target="_blank">Google</a>
+    <a href="./scrum.html" target="_blank">SCRUM</a>
     <main>
       <h1>Nombre: Jesus Quispe Mallma</h1>
       <h2>Telf: 934111593</h2>
