scrum y comidas favoritas

--- a/semana1/dia2/index.html
+++ b/semana1/dia2/index.html
@@ -12,6 +12,7 @@
     <a href="./hobbies.html" target="_blank">Hobbies</a>
     <a href="https://www.google.com.pe/" target="_blank">Google</a>
     <a href="./scrum.html" target="_blank">SCRUM</a>
+    <a href="../dia3/tarea.html" target="_blank">SCRUM 2</a>
     <main>
       <h1>Nombre: Jesus Quispe Mallma</h1>
       <h2>Telf: 934111593</h2>
