scrum y comidas favoritas

--- a/semana1/dia2/index.html
+++ b/semana1/dia2/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <header>Esta es la cabecera</header>
-    <nav>opcion1 opcion2 opcion3 opcion4</nav>
-    <a href="./hobbies.html" target="_blank">Hobbies</a>
-    <a href="https://www.google.com.pe/" target="_blank">Google</a>
-    <a href="./scrum.html" target="_blank">SCRUM</a>
-    <a href="../dia3/tarea.html" target="_blank">SCRUM 2</a>
+    <nav>
+      <a href="./hobbies.html" target="_blank">Hobbies</a>
+      <a href="https://www.google.com.pe/" target="_blank">Google</a>
+      <a href="./scrum.html" target="_blank">SCRUM</a>
+      <a href="../dia3/tarea.html" target="_blank">SCRUM 2</a>
+      <a href="../dia3/comidas-favoritas.html" target="_blank">Comida favorita</a>
+    </nav>
     <main>
       <h1>Nombre: Jesus Quispe Mallma</h1>
       <h2>Telf: 934111593</h2>
