--- a/semana1/dia4/formularios.html
+++ b/semana1/dia4/formularios.html
@@ -70,6 +70,23 @@
                     <input type="checkbox" name="soya" id="soya" value="soya">
                     <label for="soya">Soya</label>
                 </div>
+                <br>
+                <div>
+                    <label for="lenguajes">Lenguajes</label>
+                    <select name="lenguajes" id="lenguajes" size="2">
+                        <option value="1">PHP</option>
+                        <option value="2">C#</option>
+                        <option value="3">C++</option>
+                        <option value="4">Java</option>
+                    </select>
+                </div>
+                <div>
+                    <h4>Mensaje</h4>
+                </div>
+                <div>
+                    <textarea name="msg" id="msg" cols="30" rows="10"></textarea>
+                    <button type="button" onclick="alert('Click')">Click aqui Dude!!!</button>
+                </div>
             </div>
         </form>
     </main>
