semana 3 - landing page

--- a/semana3/dia1/index.html
+++ b/semana3/dia1/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Landing</title>
 </head>
 <body>
     <header>
-        <img src="https://img2.freepng.es/20180408/xlw/kisspng-ubuntu-linux-distribution-long-term-support-canoni-linux-5aca4e1926d683.7524108215232077051591.jpg" alt="logo">
+        <img id="logo" src="assets/images/linux-logo.png" alt="logo">
         <nav>
             <a href="#">Inicio</a>
             <a href="#">Acerca de mi</a>
@@ -16,5 +17,16 @@
             <a href="#">Referencias</a>
         </nav>
     </header>
+    <div id="main">
+        <p id="nombre">Hola, soy Jesús</p>
+        
+        <img id="perfil" src="https://miro.medium.com/max/3150/1*WLlwpn6OVftmcaY3y3r6Mg.png" alt="">
+        <div id="botones">
+            <button class="boton">¿ Quien soy ?</button>
+            <button class="boton">Portafolio</button>
+            <button class="boton">Referencias</button>
+        </div>
+        
+    </div>
 </body>
 </html>
