dia 2 tarea completada

--- a/semana3/dia1/index.html
+++ b/semana3/dia1/index.html
@@ -31,16 +31,9 @@
         <button class="boton">Referencias</button>
       </div>
       <p id="parrafo">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus a
-        blanditiis ad necessitatibus quia, voluptate, quam ipsum laudantium
-        doloribus omnis reprehenderit labore libero. Accusantium facere totam
-        quibusdam unde libero quo. Officia excepturi facilis alias porro sint
-        ipsum quisquam numquam libero expedita deserunt. Accusamus, at quisquam
-        tenetur rem eveniet assumenda animi nihil, mollitia error commodi quos
-        totam iure minima asperiores corrupti? Rerum aperiam quae eligendi, illo
-        accusamus dolores, est ipsam distinctio quaerat repudiandae corporis
-        mollitia nostrum. Assumenda incidunt aliquam dolore, ab sed natus, fuga
-        enim placeat mollitia sequi corrupti veritatis iure?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+        distinctio iste maxime nemo ipsam! Autem, nihil aliquam. Ut ad culpa
+        accusamus quod neque, ducimus totam. Facere nulla hic odio vero.
       </p>
       <svg id="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
