--- a/semana3/dia2/index.html
+++ b/semana3/dia2/index.html
@@ -11,10 +11,7 @@
     <header>Soy el header</header>
     <img src="https://i.pinimg.com/originals/79/f5/a4/79f5a49e85cbf1302d08555ef2a488fa.png" alt="ejemplo" />
     <p id="texto1">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo doloremque
-      consequuntur eius, alias mollitia veritatis aliquid quod. Repudiandae,
-      itaque rem perferendis consequuntur, cum nostrum esse minima recusandae,
-      amet id odio?
+      Estudio Redes y comunicaciones de datos, me especialice en telefonia IP Asterisk y ahora realizo desarrollo frontend y backend aplicando todo el conocimiento aprendido en el camino.
     </p>
     <footer>
       Soy el footer
