--- a/semana3/tarea-google/index.html
+++ b/semana3/tarea-google/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div id="div-logo">
-      <img id="img-logo" src="./assets/images/google.png" alt="" />
+      <img id="img-logo" src="./assets/images/google-gif.gif" alt="" />
     </div>
 
     <div id="contenedor-2">
